Project

General

Profile

Actions

Bug #41241

closed

failed to list descendants with child's pool deleted

Added by wb song almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Steps to reproduce:

$ ceph osd pool create pool1 8
$ ceph osd pool create pool2 8
$ rbd create pool1/img1 -s 10G
$ rbd snap create pool1/img1@snap1
$ rbd clone pool1/img1@snap1 pool2/clone1 --rbd-default-clone-format 2
$ ceph osd pool delete pool2 pool2 --yes-i-really-really-mean-it
$ rbd children pool1/img1
rbd: listing children failed: (2) No such file or directory
2019-08-14 10:15:31.343 7fd0f7eceb00 -1 librbd::util::create_ioctx: child image pool 7 no longer exists


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #43510: mimic: failed to list descendants with child's pool deletedRejectedActions
Copied to rbd - Backport #43511: nautilus: failed to list descendants with child's pool deletedResolvedNathan CutlerActions
Actions #2

Updated by Jason Dillaman over 4 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Jason Dillaman over 4 years ago

  • Backport set to mimic,nautilus
Actions #4

Updated by Jason Dillaman over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43510: mimic: failed to list descendants with child's pool deleted added
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43511: nautilus: failed to list descendants with child's pool deleted added
Actions #7

Updated by Nathan Cutler over 4 years ago

  • Pull request ID set to 29654
Actions #8

Updated by Nathan Cutler over 4 years ago

This is a follow-on fix for 3d5f055a0796c4e059c22b46f6f1b840bb9d10ef which was a part of https://github.com/ceph/ceph/pull/25194 which was merged for nautilus and is not being backported to mimic.

Actions #9

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF