librbd: skip stale child with non-existent pool for list_descendants

Fixes: https://tracker.ceph.com/issues/41241

Signed-off-by: songweibin <song.weibin@zte.com.cn>
(cherry picked from commit a485eb827009b629c4c7804ec1b7191cfe6b6dd7)